<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">torch demo cifar</string>
    <string name="cifar_test">Cifar data test page</string>
    <string name="test_at_once">Test all category at once</string>
    <string name="category_test">Test each category (10 picture only)</string>
    <string name="button_cifar">Start Cifar test set detector</string>
    <string name="button_image_cifar">Start Cifar Image detector</string>
    <string name="Back">Back</string>
    <string name="recog">Test Drawables(100 pngs from Cifar-10)</string>
    <string name="test_torch">Test data set(1000 data from Cifar-10)</string>
    <string name="result">result is %s</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_image">Select Image</string>
    <string name="start_recog">Start recognition</string>
    <string name="start_resize_and_recog">Start recognition after resize</string>
    <string name="statement">Dataset and images used in this demo refer below website and article</string>
    <string name="cifar10_web">http://www.cs.toronto.edu/~kriz/cifar.html</string>
    <string name="cifar10_cite">Learning Multiple Layers of Features from Tiny Images, Alex Krizhevsky, 2009.</string>

</resources>