<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_cifar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cifar" />

        <Button
            android:id="@+id/button_image_cifar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_image_cifar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statement"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cifar10_web"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cifar10_cite"
            android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>

</RelativeLayout>